--- a/catalog.css
+++ b/catalog.css
@@ -1,13 +1,10 @@
-body{
-    margin-top:20px;
-    }
 
-    
     .product {
       padding-top: 5px;
       padding-bottom: 5px;
       margin-left: auto;
       margin-right: auto;
+
     }
     
     .product .caption {
@@ -193,7 +190,6 @@ body{
     font-family: 'Poppins', sans-serif;
 }
 body {
-    display: grid;
     place-items: center;
     min-height: 100vh;
     background-color: orange;
@@ -273,4 +269,42 @@ span {
 
 .hide{
     display: none;
+}
+
+/* Add a black background color to the top navigation */
+.topnav {
+  background-color: #333;
+  overflow: hidden;
+  margin-bottom: 20px;
+}
+
+/* Style the links inside the navigation bar */
+.topnav a {
+float: left;
+color: #f2f2f2;
+text-align: center;
+padding: 14px 16px;
+text-decoration: none;
+font-size: 17px;
+}
+
+/* Change the color of links on hover */
+.topnav a:hover {
+background-color: #ddd;
+color: black;
+}
+
+/* Add a color to the active/current link */
+.topnav a.active {
+background-color: gray;
+color: white;
+}
+
+/* Right-aligned section inside the top navigation */
+.topnav-right {
+float: right;
+}
+
+.search-wrapper {
+  float: right;
 }
