--- a/login.css
+++ b/login.css
@@ -5,41 +5,43 @@
     font-family: 'Poppins', sans-serif;
 }
 
-body  
-{  
+body {  
     margin: 0;  
     padding: 0;  
     background-color:orange;    
     font-family: 'Poppins';
 }  
-.login{  
+.login {  
         width: 382px;  
         overflow: hidden;  
         margin: auto;  
         margin: 20 0 0 450px;  
         padding: 80px;  
         background: whitesmoke;  
-        border-radius: 15px ;  
-          
+        border-radius: 15px ;       
 }  
-h2{  
+
+h2 {  
     font-size: 40px;
     text-align: center;  
     color: black;  
     padding: 20px;  
-}  
-label{  
+} 
+
+label {  
     color: rgb(192, 161, 106);  
     font-size: 17px;  
 }  
-#Uname{  
+
+#Uname {  
     width: 300px;  
     height: 30px;  
     border: none;  
     border-radius: 3px;  
     padding-left: 8px;  
 }  
-#Pass{  
+
+#Pass {  
     width: 300px;  
     height: 30px;  
     border: none;  
@@ -47,21 +49,22 @@ label{
     padding-left: 8px;  
       
 }  
-#log{  
+
+#log {  
     width: 300px;  
     height: 30px;  
     border: none;  
     border-radius: 17px;  
     padding-left: 7px;  
     color: black;  
-  
-  
 }  
-span{  
+
+span {  
     color: orange;  
     font-size: 17px;  
-}  
-a{  
+}
+
+a {  
     float: right;  
     background-color: rgb(235, 92, 92);  
 }  
