--- a/catalog.css
+++ b/catalog.css
@@ -26,7 +26,8 @@ h3 {
 }
 
 h1.text-center.text-muted{
-  margin: 15px;
+  margin: 30px;
+  text-decoration: underline;
 }
 
 
@@ -39,6 +40,7 @@ h1.text-center.text-muted{
   transition: 0.3s linear;
   padding-top: 0;
   vertical-align: middle;
+  /* float: middle; */
 
 }
 
@@ -167,6 +169,11 @@ h1.text-center.text-muted{
 
 .price del {
   color: #b0bec5;
+}
+
+lable#searchbtn {
+  padding: 10px;
+  background-color: white;
 }
 
 .quantity {
@@ -326,5 +333,32 @@ float: right;
 
 .search-wrapper {
 float: right;
+background-color: rgb(246, 124, 24);
+padding: 20px;
 }
 
+
+.pbody{
+  display: flex;
+  justify-content: center;
+}
+
+#myBtn {
+  /* display: none; Hidden by default */
+  position: fixed; /* Fixed/sticky position */
+  bottom: 20px; /* Place the button at the bottom of the page */
+  right: 30px; /* Place the button 30px from the right */
+  z-index: 99; /* Make sure it does not overlap */
+  border: none; /* Remove borders */
+  outline: none; /* Remove outline */
+  background-color: rgb(246, 124, 24); /* Set a background color */
+  color: white; /* Text color */
+  cursor: pointer; /* Add a mouse pointer on hover */
+  padding: 15px; /* Some padding */
+  border-radius: 10px; /* Rounded corners */
+  font-size: 18px; /* Increase font size */
+}
+
+#myBtn:hover {
+  background-color: #555; /* Add a dark-grey background on hover */
+}
