--- a/login.css
+++ b/login.css
@@ -66,7 +66,7 @@ span {
 
 a {  
     float: right;  
-    background-color: rgb(235, 92, 92);  
+    /* background-color: rgb(235, 92, 92);   */
 }  
 
 /* Add a black background color to the top navigation */
