--- a/catalog.css
+++ b/catalog.css
@@ -1,4 +1,3 @@
-
 .product {
   padding-top: 5px;
   padding-bottom: 5px;
@@ -6,7 +5,6 @@
   margin-right: auto;
 
 }
-
 
 .product .caption {
   margin-top: 15px;
@@ -20,18 +18,18 @@
 h3 {
   padding: 8px;
   background-color: #e1e7ec;
-  display:inline-block;
+  display: inline-block;
   padding: 5px;
   margin: 10px;
 }
 
-h1.text-center.text-muted{
+h1.text-center.text-muted {
   margin: 30px;
   text-decoration: underline;
 }
 
 
-.product .caption .price + .price {
+.product .caption .price+.price {
   margin-left: 15px;
 }
 
@@ -40,26 +38,24 @@ h1.text-center.text-muted{
   transition: 0.3s linear;
   padding-top: 0;
   vertical-align: middle;
-  /* float: middle; */
-
 }
 
 .product.tumbnail img:hover {
   box-shadow: 0 5px 25px 0 rgba(0, 0, 0, 0.2);
-
 }
 
 .single-product span {
   display: inline-block;
 }
 
-.single-product .rating .fa-star, .single-product .rating .fa-star-o {
+.single-product .rating .fa-star,
+.single-product .rating .fa-star-o {
   font-size: 16px;
   color: #f7d4a0;
   margin-left: 2px;
 }
 
-.single-product .rating + * {
+.single-product .rating+* {
   margin-left: 15px;
 }
 
@@ -88,17 +84,17 @@ h1.text-center.text-muted{
   font-size: 33px;
 }
 
-.single-product .caption * + .price {
+.single-product .caption *+.price {
   margin-left: 10.8%;
 }
 
 @media (max-width: 1199px) {
-  .single-product .caption * + .price {
+  .single-product .caption *+.price {
     margin-left: 7.8%;
   }
 }
 
-.single-product .caption * + .quantity {
+.single-product .caption *+.quantity {
   margin-left: 26px;
 }
 
@@ -111,7 +107,8 @@ h1.text-center.text-muted{
   text-align: left;
 }
 
-.single-product .caption .info-list dt, .single-product .caption .info-list dd {
+.single-product .caption .info-list dt,
+.single-product .caption .info-list dd {
   display: inline-block;
   line-height: 25px;
   padding-top: 10px;
@@ -147,6 +144,7 @@ h1.text-center.text-muted{
   .single-product .table-mobile tr {
     padding-top: 0;
   }
+
   .single-product .table-mobile tr:before {
     display: none;
   }
@@ -160,7 +158,7 @@ h1.text-center.text-muted{
   font-weight: 700;
   letter-spacing: 0.02em;
   color: #2b2f3e;
-  
+
 }
 
 .price.sale {
@@ -209,156 +207,191 @@ lable#searchbtn {
 }
 
 @import url(https://fonts.googleapis.com/css?family=Poppins:100,100italic,200,200italic,300,300italic,regular,italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic);
+
 * {
-margin: 0;
-padding: 0;
-box-sizing: border-box;
-font-family: 'Poppins', sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
 }
+
 body {
-place-items: center;
-min-height: 100vh;
-background-color: orange;
+  place-items: center;
+  min-height: 100vh;
+  background-color: orange;
 }
 
 button {
-background-color: #fff;
-border: none;
-font-size: 1.1rem;
-border-radius: .5rem;
-cursor: pointer;
-width: 200px;
-height: 45px;
-overflow: hidden;
-position: relative;
-outline: none;
+  background-color: #fff;
+  border: none;
+  font-size: 1.1rem;
+  border-radius: .5rem;
+  cursor: pointer;
+  width: 200px;
+  height: 45px;
+  overflow: hidden;
+  position: relative;
+  outline: none;
 }
+
 i {
-position: absolute;
-top: 50%;
-left: 50%;
-transform: translate(-50%, -50%);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
+
 span {
-position: absolute;
-top: 50%;
-left: 50%;
-width: 100%;
-transform: translate(-50%, -50%);
-transition: 500ms ease-in-out transform;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 100%;
+  transform: translate(-50%, -50%);
+  transition: 500ms ease-in-out transform;
 }
+
 .added-to-cart {
-transform: translate(-50%, -200%);
-transition-delay: 1800ms;
+  transform: translate(-50%, -200%);
+  transition-delay: 1800ms;
 }
+
 .fa-shopping-cart {
-transform: translate(-800%, -50%);
-animation-delay: 200ms;
+  transform: translate(-800%, -50%);
+  animation-delay: 200ms;
 }
+
 .fa-shopping-bag {
-transform: translate(-50%, -400%);
-font-size: .5rem;
+  transform: translate(-50%, -400%);
+  font-size: .5rem;
 }
 
 .add-to-cart-animation {
-transform: translate(-50%, -50%) scale(0);
+  transform: translate(-50%, -50%) scale(0);
 }
+
 .added-to-cart-animation {
-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
 }
 
 @keyframes cart {
-0% { transform: translate(-800%, -50%); }
-30% { transform: translate(-50%, -50%); }
-70% { transform: translate(-50%, -50%); }
-100% { transform: translate(105px, -50%); }
+  0% {
+    transform: translate(-800%, -50%);
+  }
+
+  30% {
+    transform: translate(-50%, -50%);
+  }
+
+  70% {
+    transform: translate(-50%, -50%);
+  }
+
+  100% {
+    transform: translate(105px, -50%);
+  }
 }
 
 @keyframes bag {
-0% {
+  0% {
     transform: translate(-50%, -400%);
     opacity: 1;
-}
-20% {
+  }
+
+  20% {
     transform: translate(-50%, -90%);
     opacity: 1;
-}
-50% {
+  }
+
+  50% {
     transform: translate(-50%, -90%);
     opacity: 0;
-}
-100% {
+  }
+
+  100% {
     transform: translate(-50%, -90%);
     opacity: 0;
-}
+  }
 }
 
-.hide{
-display: none;
+.hide {
+  display: none;
 }
 
 /* Add a black background color to the top navigation */
 .topnav {
-background-color: #333;
-overflow: hidden;
-margin-bottom: 20px;
+  background-color: #333;
+  overflow: hidden;
+  margin-bottom: 20px;
 }
 
 /* Style the links inside the navigation bar */
 .topnav a {
-float: left;
-color: #f2f2f2;
-text-align: center;
-padding: 14px 16px;
-text-decoration: none;
-font-size: 17px;
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
 }
 
 /* Change the color of links on hover */
 .topnav a:hover {
-background-color: #ddd;
-color: black;
+  background-color: #ddd;
+  color: black;
 }
 
 /* Add a color to the active/current link */
 .topnav a.active {
-background-color: gray;
-color: white;
+  background-color: gray;
+  color: white;
 }
 
 /* Right-aligned section inside the top navigation */
 .topnav-right {
-float: right;
+  float: right;
 }
 
 .search-wrapper {
-float: right;
-background-color: rgb(246, 124, 24);
-padding: 20px;
+  float: right;
+  background-color: rgb(246, 124, 24);
+  padding: 20px;
 }
 
 
-.pbody{
+.pbody {
   display: flex;
   justify-content: center;
 }
 
 #myBtn {
   /* display: none; Hidden by default */
-  position: fixed; /* Fixed/sticky position */
-  bottom: 20px; /* Place the button at the bottom of the page */
-  right: 30px; /* Place the button 30px from the right */
-  z-index: 99; /* Make sure it does not overlap */
-  border: none; /* Remove borders */
-  outline: none; /* Remove outline */
-  background-color: rgb(246, 124, 24); /* Set a background color */
-  color: white; /* Text color */
-  cursor: pointer; /* Add a mouse pointer on hover */
-  padding: 15px; /* Some padding */
-  border-radius: 10px; /* Rounded corners */
-  font-size: 18px; /* Increase font size */
+  position: fixed;
+  /* Fixed/sticky position */
+  bottom: 20px;
+  /* Place the button at the bottom of the page */
+  right: 30px;
+  /* Place the button 30px from the right */
+  z-index: 99;
+  /* Make sure it does not overlap */
+  border: none;
+  /* Remove borders */
+  outline: none;
+  /* Remove outline */
+  background-color: rgb(246, 124, 24);
+  /* Set a background color */
+  color: white;
+  /* Text color */
+  cursor: pointer;
+  /* Add a mouse pointer on hover */
+  padding: 15px;
+  /* Some padding */
+  border-radius: 10px;
+  /* Rounded corners */
+  font-size: 18px;
+  /* Increase font size */
 }
 
 #myBtn:hover {
-  background-color: #555; /* Add a dark-grey background on hover */
+  background-color: #555;
+  /* Add a dark-grey background on hover */
 }
