--- a/cart.css
+++ b/cart.css
@@ -273,3 +273,9 @@ h2{
     font-family: Arial, Helvetica, sans-serif;
     margin: 30px;
 }
+
+#container, .table-responsive, .shopping-cart{
+    align-items: center; 
+    align-content: center;
+    text-align: center;
+ }
